[tool.poetry]
name = "ipchecker"
version = "0.1.0"
description = ""
authors = ["RGGH <pisscompany@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.79.0"}
tqdm = "^4.64.0"
netaddr = "^0.8.0"
py-radix = "^0.10.0"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

